# Kiha

./: .env.example  .gitignore  CHANGELOG.md  MASTER.md  README.md  deploy.sh  docker-compose.yml
.github/workflows/: ci.yml
.planning/: ROADMAP.md  TODO.md
firmware/: CMakeLists.txt
firmware/main/: CMakeLists.txt  camera_handler.c  camera_handler.h  frame_protocol.h  main.c  (+4 more)
mobile/: analysis_options.yaml  pubspec.yaml
server/: Dockerfile  pyproject.toml
server/scripts/: demo_30s_sorgu.py  demo_pipeline.py  moondream_demo.py  simulate_video.py  webcam_test.py
server/src/: main.py
server/src/api/: __init__.py
server/src/api/middleware/: __init__.py  auth_middleware.py
server/src/api/routes/: __init__.py  chat.py  device.py  health.py
server/src/application/: __init__.py
server/src/application/usecases/: __init__.py  ask_question.py  process_frame.py
server/src/config/: __init__.py  settings.py
server/src/domain/: __init__.py  exceptions.py
server/src/domain/models/: __init__.py  base.py
server/src/domain/services/: __init__.py  chat_service.py  frame_service.py
server/src/infrastructure/: __init__.py
server/src/infrastructure/ai/: __init__.py  frame_search_service.py  gemini_vision.py  groq_vision.py  inference_engine.py  local_vlm.py  ollama_vision.py  query_parser.py  scene_memory.py  vlm_output_parser.py
server/src/infrastructure/database/: __init__.py  frame_repository.py  sqlite_repository.py
server/src/infrastructure/network/: __init__.py  udp_receiver.py  websocket_handler.py
server/src/infrastructure/security/: __init__.py
(+12 files in other folders)
